--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -119,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "GameLister"
+    }
+  },
+  "defaultProject": "GameLister",
+  "cli": {
+    "analytics": "6d38dc3a-d037-46c1-b2fe-d755d8730cfd"
+  }
 }
