--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.2",
+    "@angular/animations": "^10.1.2",
     "@angular/common": "~10.1.2",
     "@angular/compiler": "~10.1.2",
     "@angular/core": "~10.1.2",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~10.1.2",
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "bootstrap": "^3.3.7",
+    "firebase": "^7.21.0",
+    "ngx-pagination": "^5.0.0",
+    "ngx-toastr": "^13.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
